--- a/components/camel-ai/camel-milvus/pom.xml
+++ b/components/camel-ai/camel-milvus/pom.xml
@@ -39,6 +39,7 @@
         <!-- Milvus is not available on these platforms -->
         <skipITs.s390x>true</skipITs.s390x>
         <skipTests.s390x>true</skipTests.s390x>
+        <langchain4j-version>1.0.1</langchain4j-version>
     </properties>
 
     <dependencies>
