--- a/components/camel-ai/camel-neo4j/pom.xml
+++ b/components/camel-ai/camel-neo4j/pom.xml
@@ -40,6 +40,7 @@
     <skipITs.s390x>true</skipITs.s390x>
     <skipTests.ppc64le>true</skipTests.ppc64le>
     <skipTests.s390x>true</skipTests.s390x>
+    <langchain4j-version>1.0.1</langchain4j-version>
   </properties>
 
   <dependencies>
