--- a/components/camel-ai/camel-langchain4j-web-search/pom.xml
+++ b/components/camel-ai/camel-langchain4j-web-search/pom.xml
@@ -68,14 +68,14 @@
     <dependency>
       <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j-web-search-engine-tavily</artifactId>
-      <version>${langchain4j-version}</version>
+      <version>${langchain4j-beta-version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j-web-search-engine-google-custom</artifactId>
-      <version>${langchain4j-version}</version>
+      <version>${langchain4j-beta-version}</version>
       <scope>test</scope>
     </dependency>
 
