--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -330,7 +330,9 @@
         <keycloak-client-version>26.0.5</keycloak-client-version>
         <kubernetes-client-version>7.3.1</kubernetes-client-version>
         <kudu-version>1.17.1</kudu-version>
-        <langchain4j-version>0.36.2</langchain4j-version>
+        <langchain4j-version>1.0.1</langchain4j-version>
+        <!-- remove this one when all langchain4j artifacts are made final -->
+        <langchain4j-beta-version>1.0.1-beta6</langchain4j-beta-version>
         <leveldbjni-version>1.8</leveldbjni-version>
         <leveldb-api-version>0.12</leveldb-api-version>
         <leveldb-version>0.12</leveldb-version>
