--- a/components/camel-openapi-validator/src/test/resources/log4j2.properties
+++ b/components/camel-openapi-validator/src/test/resources/log4j2.properties
@@ -26,3 +26,7 @@ appender.out.layout.type = PatternLayout
 appender.out.layout.pattern = %d [%-15.15t] %-5p %-30.30c{1} - %m%n
 rootLogger.level = INFO
 rootLogger.appenderRef.file.ref = file
+
+logger.validator.name=org.apache.camel.component.rest.openapi.validator.client
+logger.validator.level=DEBUG
+
