Upgrade Langchain4j beta dependencies to 1.1.x and promote the ones moving to RC version

--- a/components/camel-ai/camel-langchain4j-chat/pom.xml
+++ b/components/camel-ai/camel-langchain4j-chat/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-ollama</artifactId>
-            <version>${langchain4j-beta-version}</version>
+            <version>${langchain4j-rc-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
