--- a/components/camel-ai/camel-langchain4j-tools/pom.xml
+++ b/components/camel-ai/camel-langchain4j-tools/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-ollama</artifactId>
-            <version>${langchain4j-beta-version}</version>
+            <version>${langchain4j-rc-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
