--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -819,17 +819,17 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-fory</artifactId>
+        <version>4.13.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-freemarker</artifactId>
         <version>4.13.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-ftp</artifactId>
-        <version>4.13.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.camel</groupId>
-        <artifactId>camel-fury</artifactId>
         <version>4.13.0-SNAPSHOT</version>
       </dependency>
       <dependency>
