--- a/components/pom.xml
+++ b/components/pom.xml
@@ -141,7 +141,7 @@
         <module>camel-fop</module>
         <module>camel-freemarker</module>
         <module>camel-ftp</module>
-        <module>camel-fury</module>
+        <module>camel-fory</module>
         <module>camel-geocoder</module>
         <module>camel-git</module>
         <module>camel-github</module>
