--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -59,6 +59,7 @@
         <activemq-version>5.19.0</activemq-version>
         <activemq6-version>6.1.7</activemq6-version>
         <activemq-artemis-version>2.41.0</activemq-artemis-version>
+        <allegro-converter-version>0.3.0</allegro-converter-version>
         <amazon-kinesis-client-version>2.6.0</amazon-kinesis-client-version>
         <angus-mail-version>2.0.3</angus-mail-version>
         <apacheds-version>2.0.0.AM26</apacheds-version>
