Refactor CachedOuputStream and tests
Optimize CachedOutputStream.pageToFileStream for large streams

Both org.apache.camel.util.IOHelper.copy(InputStream, OutputStream) and java.io.ByteArrayOutputStream.writeTo(OutputStream) internally invoke java.nio.ByteBuffer.allocateDirect which results in OOM on direct buffer memory

- New maven module for the test
- Remove the deprecation on the IOHelper copy method as we use it for this now

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -39,5 +39,6 @@
     <modules>
         <module>test-bundles</module>
         <module>camel-itest</module>
+        <module>camel-streamcaching-test</module>
     </modules>
 </project>
