DONT MERGE - Debug camel-kafka tests with DB transactions

--- a/.github/actions/incremental-build/action.yaml
+++ b/.github/actions/incremental-build/action.yaml
@@ -57,3 +57,9 @@ runs:
       with:
         name: incremental-${{ inputs.mode }}-${{ inputs.artifact-upload-suffix }}.log
         path: incremental-${{ inputs.mode }}.log
+    - name: archive camel-kafka logs
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+      if: always()
+      with:
+        name: camel-kafka-test.log
+        path: components/camel-kafka/target/camel-kafka-test.log
