--- a/components/camel-kafka/src/test/resources/log4j2.properties
+++ b/components/camel-kafka/src/test/resources/log4j2.properties
@@ -19,7 +19,7 @@ appender.out.type = File
 appender.out.name = out
 appender.out.fileName = target/camel-kafka-test.log
 appender.out.layout.type = PatternLayout
-appender.out.layout.pattern = %d [%-15.15t] %-5p %-30.30c{1} - %m%n
+appender.out.layout.pattern = %m%n
 appender.stdout.type = Console
 appender.stdout.name = stdout
 appender.stdout.layout.type = PatternLayout
@@ -32,7 +32,7 @@ logger.camel.name=org.apache.camel
 logger.camel.level=INFO
 
 logger.camelKafka.name=org.apache.camel.component.kafka
-logger.camelKafka.level=DEBUG
+logger.camelKafka.level=TRACE
 
 logger.idem.name=org.apache.camel.processor.idempotent
 logger.idem.level=INFO
@@ -41,7 +41,22 @@ logger.resume.name=org.apache.camel.processor.resume.kafka
 logger.resume.level=INFO
 
 logger.kafka.name=org.apache.kafka
-logger.kafka.level=WARN
+logger.kafka.level=trace
+
+logger.k1.name=org.apache.kafka.clients.producer.KafkaProducer
+logger.k1.level=trace
+logger.k2.name=org.apache.kafka.clients.producer.ProducerConfig
+logger.k2.level=info
+logger.k3.name=org.apache.kafka.clients.NetworkClient
+logger.k3.level=warn
+logger.k4.name=org.apache.kafka.common.metrics
+logger.k4.level=warn
+logger.k5.name=org.apache.kafka.clients.producer
+logger.k5.level=warn
+logger.k6.name=org.apache.kafka.common.telemetry
+logger.k6.level=warn
+logger.k7.name=org.testcontainers.kafka
+logger.k7.level=debug
 
 # To verify the ResumableCompletion onFailure
 # logger.resume-processor.name=org.apache.camel.processor.resume
