Upgrade Kudu to version 1.18.0
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/components/camel-kudu/pom.xml
+++ b/components/camel-kudu/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>camel-test-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-migrationsupport</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Spin a kudu cluster to run integration tests -->
         <!-- as described in
