CAMEL-22214: camel-groovy - Allow to pre-load groovy source files for shared functions and DTOs

--- a/dsl/camel-kamelet-main/src/main/resources/camel-main-known-dependencies.properties
+++ b/dsl/camel-kamelet-main/src/main/resources/camel-main-known-dependencies.properties
@@ -35,6 +35,7 @@ META-INF/services/org/apache/camel/micrometer-prometheus = camel:micrometer-prom
 META-INF/services/org/apache/camel/cron/cron-service = camel:quartz
 META-INF/services/org/apache/camel/platform-http/jolokia = camel:camel-platform-http-jolokia
 META-INF/services/org/apache/camel/jandex-class-resolver = camel:jandex
+META-INF/services/org/apache/camel/groovy-script-compiler = camel:groovy
 org.apache.camel.component.activemq.ActiveMQComponent\:embedded\=true = org.apache.activemq:activemq-broker:5.19.0
 org.apache.camel.component.activemq6.ActiveMQComponent\:embedded\=true = org.apache.activemq:activemq-broker:6.1.7
 spring.datasource.url = org.springframework.boot:spring-boot-starter-jdbc:${spring-boot-version}
