--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1139,6 +1139,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jbang-plugin-test</artifactId>
+        <version>4.14.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-jcache</artifactId>
         <version>4.14.0-SNAPSHOT</version>
       </dependency>
