--- a/dsl/camel-jbang/camel-launcher/pom.xml
+++ b/dsl/camel-jbang/camel-launcher/pom.xml
@@ -63,7 +63,7 @@
             <artifactId>camel-jbang-core</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <!-- Pre-installed plugins -->
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -78,6 +78,11 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jbang-plugin-kubernetes</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jbang-plugin-test</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
