CAMEL-22238: Add Camel JBang plugin for automated testing
- Create new test plugin to help create automated tests for Camel integrations during prototyping phase with JBang
- Add opportunity for plugins to participate in the project export
- Plugin is able to add sources and resources to the project export
- Plugin is able to add dependencies and build properties to the resulting Maven project
- The test plugin adds test scoped sources and resources to the project export
- Add support for Maven scope in Maven GAV for instance in order to add test scoped dependencies
- Add some basic documentation of the new test plugin

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2839,6 +2839,11 @@
                 <artifactId>camel-jbang-plugin-kubernetes</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-jbang-plugin-test</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- camel catalog -->
             <dependency>
