CAMEL-22214: camel-groovy - Allow to pre-load groovy source files for shared functions and DTOs

--- a/dsl/camel-jbang/camel-jbang-core/src/test/resources/groovy-demo.camel.yaml
+++ b/dsl/camel-jbang/camel-jbang-core/src/test/resources/groovy-demo.camel.yaml
@@ -27,6 +27,6 @@
             uri: language
             parameters:
               languageName: groovy
-              resourceUri: classpath:demo.groovy
+              resourceUri: demo.groovy
         - log:
             message: ${variable.var1}
