--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -490,6 +490,7 @@
         <squareup-okio-version>1.17.5</squareup-okio-version>
         <sshd-version>2.15.0</sshd-version>
         <stompjms-version>1.19</stompjms-version>
+        <stumbleupon-async-version>1.4.1</stumbleupon-async-version>
         <swagger-java-version>1.6.10</swagger-java-version>
         <swagger-openapi3-version>2.2.32</swagger-openapi3-version>
         <swagger-java-parser-version>1.0.65</swagger-java-parser-version>
