--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1069,7 +1069,7 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
-        <artifactId>camel-j8583</artifactId>
+        <artifactId>camel-iso8583</artifactId>
         <version>4.14.0-SNAPSHOT</version>
       </dependency>
       <dependency>
