CAMEL-21974: camel-j8583: ISO-8583 data format (#18655)
* CAMEL-21974: camel-j8583: ISO-8583 data format

--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1069,6 +1069,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-iso8583</artifactId>
+        <version>4.14.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-jackson</artifactId>
         <version>4.14.0-SNAPSHOT</version>
       </dependency>
