--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -175,6 +175,7 @@
         <geronimo-j2ee-management-spec-version>1.1</geronimo-j2ee-management-spec-version>
         <geronimo-jcdi-1.0-spec-version>1.0</geronimo-jcdi-1.0-spec-version>
         <geronimo-jcdi-1.1-spec-version>1.0</geronimo-jcdi-1.1-spec-version>
+        <j8583-version>3.0.0</j8583-version>
         <jakarta-jms-api-version>3.1.0</jakarta-jms-api-version>
         <jakarta-persistence-api-version>3.2.0</jakarta-persistence-api-version>
         <jakarta-json-api-version>2.1.3</jakarta-json-api-version>
@@ -1578,6 +1579,11 @@
             <dependency>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-ironmq</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-iso8583</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
