CAMEL-22251: Added unit test

--- a/components/camel-jetty/pom.xml
+++ b/components/camel-jetty/pom.xml
@@ -159,6 +159,12 @@
             <version>${squareup-okhttp-version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured-version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
