Use mock instead of ollama

--- a/components/camel-ai/camel-langchain4j-tools/pom.xml
+++ b/components/camel-ai/camel-langchain4j-tools/pom.xml
@@ -76,6 +76,12 @@
         <!-- for testing -->
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test-infra-openai-mock</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-test-spring-junit5</artifactId>
             <scope>test</scope>
         </dependency>
