Enable ppc64le support for camel-tensorflow-serving

--- a/test-infra/camel-test-infra-tensorflow-serving/src/test/resources/org/apache/camel/test/infra/tensorflow/serving/services/container.properties
+++ b/test-infra/camel-test-infra-tensorflow-serving/src/test/resources/org/apache/camel/test/infra/tensorflow/serving/services/container.properties
@@ -16,3 +16,4 @@
 ## ---------------------------------------------------------------------------
 tensorflow.serving.container=mirror.gcr.io/tensorflow/serving:2.18.0
 tensorflow.serving.container.aarch64=bitnami/tensorflow-serving:2.18.0
+tensorflow.serving.container.ppc64le=ibmcom/powerai:1.6.2-tensorflow-serving-ubuntu18.04-py37-ppc64le-21.036
