--- a/test-infra/camel-test-infra-fhir/src/main/resources/org/apache/camel/test/infra/fhir/services/container.properties
+++ b/test-infra/camel-test-infra-fhir/src/main/resources/org/apache/camel/test/infra/fhir/services/container.properties
@@ -14,4 +14,4 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-fhir.container=mirror.gcr.io/hapiproject/hapi:v7.4.0
+fhir.container=mirror.gcr.io/hapiproject/hapi:v8.2.0-2
