Enabling ppc64le support

--- a/test-infra/camel-test-infra-weaviate/src/main/resources/org/apache/camel/test/infra/weaviate/services/container.properties
+++ b/test-infra/camel-test-infra-weaviate/src/main/resources/org/apache/camel/test/infra/weaviate/services/container.properties
@@ -15,3 +15,5 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 weaviate.container=cr.weaviate.io/semitechnologies/weaviate:1.32.0
+weaviate.container.ppc64le=icr.io/ppc64le-oss/weaviate-ppc64le:1.31.1
+
