CAMEL-22301: make the support level for AI components more consistent

--- a/components/camel-ai/camel-langchain4j-tokenizer/pom.xml
+++ b/components/camel-ai/camel-langchain4j-tokenizer/pom.xml
@@ -37,7 +37,7 @@
         <firstVersion>4.8.0</firstVersion>
         <label>ai</label>
         <title>LangChain4j Tokenizer</title>
-        <supportLevel>Experimental</supportLevel>
+        <supportLevel>Preview</supportLevel>
     </properties>
 
     <dependencies>
