--- a/components/camel-ai/camel-langchain4j-core/pom.xml
+++ b/components/camel-ai/camel-langchain4j-core/pom.xml
@@ -37,7 +37,7 @@
         <firstVersion>4.7.0</firstVersion>
         <label>ai</label>
         <title>LangChain4j Core</title>
-        <supportLevel>Experimental</supportLevel>
+        <supportLevel>Preview</supportLevel>
     </properties>
 
     <dependencies>
