CAMEL-22303: mark camel-torchserve as deprecated

--- a/components/camel-ai/camel-torchserve/pom.xml
+++ b/components/camel-ai/camel-torchserve/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>camel-torchserve</artifactId>
     <packaging>jar</packaging>
-    <name>Camel :: AI :: TorchServe</name>
+    <name>Camel :: AI :: TorchServe (deprecated)</name>
     <description>Provide access to PyTorch TorchServe servers to run inference with PyTorch models remotely
     </description>
 
