CAMEL-22326: rework the agent component to support any type of agent
- Adjust some of the tests so it can be possible to run tests with Google

--- a/components/camel-ai/camel-langchain4j-agent/pom.xml
+++ b/components/camel-ai/camel-langchain4j-agent/pom.xml
@@ -69,6 +69,13 @@
       </dependency>
       <dependency>
           <groupId>dev.langchain4j</groupId>
+          <artifactId>langchain4j-google-ai-gemini</artifactId>
+          <version>${langchain4j-version}</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>dev.langchain4j</groupId>
           <artifactId>langchain4j-embeddings-bge-small-en-v15-q</artifactId>
           <version>${langchain4j-beta-version}</version>
           <scope>test</scope>
